src/main/java/io/antlrgenerated/WriterParser.java
// Generated from Writer.g4 by ANTLR 4.7
package io.antlrgenerated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WriterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, DOCUMENT=11, SECTION=12, PARAGRAPH=13, SENTENCE=14, CLAUSE=15, 
		SUBCLAUSE=16, FEATURES=17, PART_OF_SPEECH=18, DECIMAL_PLACES=19, NUMERIC=20, 
		STRING=21, NEW_LINE=22, WHITE_SPACE=23, PLACE_HOLDER_PREFIX=24;
	public static final int
		RULE_writeDocument = 0, RULE_document = 1, RULE_section = 2, RULE_paragraph = 3, 
		RULE_sentence = 4, RULE_clause = 5, RULE_subclause = 6, RULE_configuration = 7, 
		RULE_documentTitle = 8, RULE_documentTitleValue = 9, RULE_sectionTitle = 10, 
		RULE_sectionTitleValue = 11, RULE_features = 12, RULE_feature = 13, RULE_tense = 14, 
		RULE_tenseValue = 15, RULE_complementiser = 16, RULE_complementiserValue = 17, 
		RULE_conjunction = 18, RULE_conjunctionValue = 19, RULE_assignments = 20, 
		RULE_assignment = 21, RULE_identifier = 22, RULE_expression = 23, RULE_option = 24, 
		RULE_decimalPlaces = 25, RULE_decimalPlacesValue = 26;
	public static final String[] ruleNames = {
		"writeDocument", "document", "section", "paragraph", "sentence", "clause", 
		"subclause", "configuration", "documentTitle", "documentTitleValue", "sectionTitle", 
		"sectionTitleValue", "features", "feature", "tense", "tenseValue", "complementiser", 
		"complementiserValue", "conjunction", "conjunctionValue", "assignments", 
		"assignment", "identifier", "expression", "option", "decimalPlaces", "decimalPlacesValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'DocumentTitle'", "'='", "'SectionTitle'", "'tense'", "'present'", 
		"'past'", "'future'", "'complementiser'", "'conjunction'", "':'", "'Document'", 
		"'Section'", "'Paragraph'", "'Sentence'", "'Clause'", "'Subclause'", "'Features'", 
		null, "'DecimalPlaces'", null, null, null, null, "'@'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, "DOCUMENT", 
		"SECTION", "PARAGRAPH", "SENTENCE", "CLAUSE", "SUBCLAUSE", "FEATURES", 
		"PART_OF_SPEECH", "DECIMAL_PLACES", "NUMERIC", "STRING", "NEW_LINE", "WHITE_SPACE", 
		"PLACE_HOLDER_PREFIX"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Writer.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WriterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class WriteDocumentContext extends ParserRuleContext {
		public DocumentContext document() {
			return getRuleContext(DocumentContext.class,0);
		}
		public SectionContext section() {
			return getRuleContext(SectionContext.class,0);
		}
		public ParagraphContext paragraph() {
			return getRuleContext(ParagraphContext.class,0);
		}
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public ClauseContext clause() {
			return getRuleContext(ClauseContext.class,0);
		}
		public AssignmentsContext assignments() {
			return getRuleContext(AssignmentsContext.class,0);
		}
		public WriteDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_writeDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterWriteDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitWriteDocument(this);
		}
	}

	public final WriteDocumentContext writeDocument() throws RecognitionException {
		WriteDocumentContext _localctx = new WriteDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_writeDocument);
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOCUMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				document();
				}
				break;
			case SECTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				section();
				}
				break;
			case PARAGRAPH:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				paragraph();
				}
				break;
			case SENTENCE:
				enterOuterAlt(_localctx, 4);
				{
				setState(57);
				sentence();
				}
				break;
			case CLAUSE:
				enterOuterAlt(_localctx, 5);
				{
				setState(58);
				clause();
				}
				break;
			case PART_OF_SPEECH:
			case DECIMAL_PLACES:
				enterOuterAlt(_localctx, 6);
				{
				setState(59);
				assignments();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode DOCUMENT() { return getToken(WriterParser.DOCUMENT, 0); }
		public List<TerminalNode> NEW_LINE() { return getTokens(WriterParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(WriterParser.NEW_LINE, i);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public List<ConfigurationContext> configuration() {
			return getRuleContexts(ConfigurationContext.class);
		}
		public ConfigurationContext configuration(int i) {
			return getRuleContext(ConfigurationContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitDocument(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_document);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(DOCUMENT);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__2) {
				{
				{
				setState(63);
				configuration();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(NEW_LINE);
			setState(75);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(70);
					section();
					setState(71);
					match(NEW_LINE);
					}
					} 
				}
				setState(77);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(78);
			section();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public TerminalNode SECTION() { return getToken(WriterParser.SECTION, 0); }
		public List<TerminalNode> NEW_LINE() { return getTokens(WriterParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(WriterParser.NEW_LINE, i);
		}
		public List<ParagraphContext> paragraph() {
			return getRuleContexts(ParagraphContext.class);
		}
		public ParagraphContext paragraph(int i) {
			return getRuleContext(ParagraphContext.class,i);
		}
		public List<ConfigurationContext> configuration() {
			return getRuleContexts(ConfigurationContext.class);
		}
		public ConfigurationContext configuration(int i) {
			return getRuleContext(ConfigurationContext.class,i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitSection(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_section);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(SECTION);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__2) {
				{
				{
				setState(81);
				configuration();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(NEW_LINE);
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(88);
					paragraph();
					setState(89);
					match(NEW_LINE);
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(96);
			paragraph();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParagraphContext extends ParserRuleContext {
		public TerminalNode PARAGRAPH() { return getToken(WriterParser.PARAGRAPH, 0); }
		public List<TerminalNode> NEW_LINE() { return getTokens(WriterParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(WriterParser.NEW_LINE, i);
		}
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public List<ConfigurationContext> configuration() {
			return getRuleContexts(ConfigurationContext.class);
		}
		public ConfigurationContext configuration(int i) {
			return getRuleContext(ConfigurationContext.class,i);
		}
		public ParagraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paragraph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterParagraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitParagraph(this);
		}
	}

	public final ParagraphContext paragraph() throws RecognitionException {
		ParagraphContext _localctx = new ParagraphContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_paragraph);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(PARAGRAPH);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__2) {
				{
				{
				setState(99);
				configuration();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(NEW_LINE);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(106);
					sentence();
					setState(107);
					match(NEW_LINE);
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(114);
			sentence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public TerminalNode SENTENCE() { return getToken(WriterParser.SENTENCE, 0); }
		public List<TerminalNode> NEW_LINE() { return getTokens(WriterParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(WriterParser.NEW_LINE, i);
		}
		public List<ClauseContext> clause() {
			return getRuleContexts(ClauseContext.class);
		}
		public ClauseContext clause(int i) {
			return getRuleContext(ClauseContext.class,i);
		}
		public List<ConfigurationContext> configuration() {
			return getRuleContexts(ConfigurationContext.class);
		}
		public ConfigurationContext configuration(int i) {
			return getRuleContext(ConfigurationContext.class,i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentence);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(SENTENCE);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__2) {
				{
				{
				setState(117);
				configuration();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(NEW_LINE);
			setState(129);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(124);
					clause();
					setState(125);
					match(NEW_LINE);
					}
					} 
				}
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(132);
			clause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseContext extends ParserRuleContext {
		public TerminalNode CLAUSE() { return getToken(WriterParser.CLAUSE, 0); }
		public List<TerminalNode> NEW_LINE() { return getTokens(WriterParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(WriterParser.NEW_LINE, i);
		}
		public List<SubclauseContext> subclause() {
			return getRuleContexts(SubclauseContext.class);
		}
		public SubclauseContext subclause(int i) {
			return getRuleContext(SubclauseContext.class,i);
		}
		public List<ConfigurationContext> configuration() {
			return getRuleContexts(ConfigurationContext.class);
		}
		public ConfigurationContext configuration(int i) {
			return getRuleContext(ConfigurationContext.class,i);
		}
		public FeaturesContext features() {
			return getRuleContext(FeaturesContext.class,0);
		}
		public AssignmentsContext assignments() {
			return getRuleContext(AssignmentsContext.class,0);
		}
		public ClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitClause(this);
		}
	}

	public final ClauseContext clause() throws RecognitionException {
		ClauseContext _localctx = new ClauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_clause);
		int _la;
		try {
			int _alt;
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				match(CLAUSE);
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0 || _la==T__2) {
					{
					{
					setState(135);
					configuration();
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(141);
				match(NEW_LINE);
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FEATURES) {
					{
					setState(142);
					features();
					}
				}

				setState(150);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(145);
						subclause();
						setState(146);
						match(NEW_LINE);
						}
						} 
					}
					setState(152);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				setState(153);
				subclause();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				match(CLAUSE);
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0 || _la==T__2) {
					{
					{
					setState(155);
					configuration();
					}
					}
					setState(160);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(161);
				match(NEW_LINE);
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FEATURES) {
					{
					setState(162);
					features();
					}
				}

				setState(165);
				assignments();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubclauseContext extends ParserRuleContext {
		public TerminalNode SUBCLAUSE() { return getToken(WriterParser.SUBCLAUSE, 0); }
		public TerminalNode NEW_LINE() { return getToken(WriterParser.NEW_LINE, 0); }
		public AssignmentsContext assignments() {
			return getRuleContext(AssignmentsContext.class,0);
		}
		public List<ConfigurationContext> configuration() {
			return getRuleContexts(ConfigurationContext.class);
		}
		public ConfigurationContext configuration(int i) {
			return getRuleContext(ConfigurationContext.class,i);
		}
		public FeaturesContext features() {
			return getRuleContext(FeaturesContext.class,0);
		}
		public SubclauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subclause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterSubclause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitSubclause(this);
		}
	}

	public final SubclauseContext subclause() throws RecognitionException {
		SubclauseContext _localctx = new SubclauseContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subclause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(SUBCLAUSE);
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__2) {
				{
				{
				setState(169);
				configuration();
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(175);
			match(NEW_LINE);
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FEATURES) {
				{
				setState(176);
				features();
				}
			}

			setState(179);
			assignments();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigurationContext extends ParserRuleContext {
		public DocumentTitleContext documentTitle() {
			return getRuleContext(DocumentTitleContext.class,0);
		}
		public SectionTitleContext sectionTitle() {
			return getRuleContext(SectionTitleContext.class,0);
		}
		public ConfigurationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configuration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterConfiguration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitConfiguration(this);
		}
	}

	public final ConfigurationContext configuration() throws RecognitionException {
		ConfigurationContext _localctx = new ConfigurationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_configuration);
		try {
			setState(183);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(181);
				documentTitle();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(182);
				sectionTitle();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentTitleContext extends ParserRuleContext {
		public DocumentTitleValueContext documentTitleValue() {
			return getRuleContext(DocumentTitleValueContext.class,0);
		}
		public DocumentTitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_documentTitle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterDocumentTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitDocumentTitle(this);
		}
	}

	public final DocumentTitleContext documentTitle() throws RecognitionException {
		DocumentTitleContext _localctx = new DocumentTitleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_documentTitle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(T__0);
			setState(186);
			match(T__1);
			setState(187);
			documentTitleValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentTitleValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(WriterParser.STRING, 0); }
		public DocumentTitleValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_documentTitleValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterDocumentTitleValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitDocumentTitleValue(this);
		}
	}

	public final DocumentTitleValueContext documentTitleValue() throws RecognitionException {
		DocumentTitleValueContext _localctx = new DocumentTitleValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_documentTitleValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionTitleContext extends ParserRuleContext {
		public SectionTitleValueContext sectionTitleValue() {
			return getRuleContext(SectionTitleValueContext.class,0);
		}
		public SectionTitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionTitle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterSectionTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitSectionTitle(this);
		}
	}

	public final SectionTitleContext sectionTitle() throws RecognitionException {
		SectionTitleContext _localctx = new SectionTitleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sectionTitle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			match(T__2);
			setState(192);
			match(T__1);
			setState(193);
			sectionTitleValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionTitleValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(WriterParser.STRING, 0); }
		public SectionTitleValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionTitleValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterSectionTitleValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitSectionTitleValue(this);
		}
	}

	public final SectionTitleValueContext sectionTitleValue() throws RecognitionException {
		SectionTitleValueContext _localctx = new SectionTitleValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sectionTitleValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeaturesContext extends ParserRuleContext {
		public TerminalNode FEATURES() { return getToken(WriterParser.FEATURES, 0); }
		public TerminalNode NEW_LINE() { return getToken(WriterParser.NEW_LINE, 0); }
		public List<FeatureContext> feature() {
			return getRuleContexts(FeatureContext.class);
		}
		public FeatureContext feature(int i) {
			return getRuleContext(FeatureContext.class,i);
		}
		public FeaturesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_features; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).enterFeatures(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WriterListener ) ((WriterListener)listener).exitFeatures(this);
		}
	}

	public final FeaturesContext features() throws RecognitionException {
		FeaturesContext _localctx = new FeaturesContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_features);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			match(FEATURES);
			setState(198);
			match(NEW_LINE);
			setState(200); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(199);
				feature();
				}
				}
				setState(202); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__7) | (1L << T__8))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
